app/static/print.css
.myrecipes-active {
	background: linear-gradient(to bottom, var(--color-active-bg) calc(100% - 2px), var(--color-active-bottom) 5px) no-repeat left bottom;
}
.myrecipes-active:hover {
	background: linear-gradient(to bottom, var(--color-active-bg-hover) calc(100% - 2px), var(--color-active-bottom) 5px) no-repeat left bottom !important;
}
.mt-myrecipes {display: block !important;}
/* THEMES */
:root {
	--color-block1: #ffffff;
	--color-bg-print-container: #111111;
	--color-btn-default: #ffffff;
}
[data-theme="light"] {
	--color-block1: #000000;
	--color-bg-print-container: #efefef;
	--color-btn-default: #000000;
}
[data-theme="dark"] {
	--color-block1: #ffffff;
	--color-bg-print-container: #111111;
	--color-btn-default: #ffffff;
}
/* SCALING */
:root {
	--font-block1: 16px;
	--font-flashed: 14px;
	--height-flashed: 17px;
	--font-btn-default: 16px;
	--height-btn-default: 38px;
	--size-btn-icon: 20px;
}
[data-scaling="normal"] {
	--font-block1: 16px;
	--font-flashed: 14px;
	--height-flashed: 17px;
	--font-btn-default: 16px;
	--height-btn-default: 38px;
	--size-btn-icon: 20px;
}
[data-scaling="large"] {
	--font-block1: 18px;
	--font-flashed: 16px;
	--height-flashed: 19px;
	--font-btn-default: 18px;
	--height-btn-default: 40px;
	--size-btn-icon: 22px;
}
/* ACCENT COLOR APPLICATION */
.btn-default {background-color: var(--color);}
.btn-default:hover {background: var(--color-lighter);}
.btn-default:active, .btn-default.active {background: var(--color-darker);}
/* BLOCK 1 */
#block1 {
	margin: 0;
	padding: 20px;
	color: var(--color-block1);
	font-size: var(--font-block1);
}
.block1inner {
	min-height: 100%;
	margin: 0 auto;
	width: 1000px;
}
/* FLASHED MESSAGES */
#flashed-err {
	background: var(--color-flashed-err);
	font-size: var(--font-flashed);
	min-height: var(--height-flashed);
	margin-bottom: 16px;
	margin-top: 0px;
	padding: 6px;
}
#flashed-norm {
	background: var(--color-flashed-norm);
	font-size: var(--font-flashed);
	min-height: var(--height-flashed);
	margin-bottom: 16px;
	margin-top: 0px;
	padding: 6px;
}

.no-print {
	text-align: center;
	margin-bottom: 20px;
}
.btn-default {
	border: none;
	color: var(--color-btn-default);
	cursor: pointer;
	font-size: var(--font-btn-default);
	height: var(--height-btn-default);
	margin-right: 10px;
	padding-left: 4px;
	padding-right: 4px;
	transition: background-color 0.08s linear, border 0.08s linear;
	-webkit-font-smoothing: subpixel-antialiased;
	-webkit-transition: background-color 0.08s linear, border 0.08s linear;
}
.btn-default:active, .btn-default.active, .btn-default:hover, .btn-default:focus {outline: none;}
.btn-text {float: left; padding-left: 7px; padding-right: 8px;}
.btn-icon {
	display: block; 
	float: left; 
	height: var(--size-btn-icon); 
	padding-left: 5px; 
	width: var(--size-btn-icon);
}
.btn-icon img {height: 100%; width: 100%;}
.print-container {
	background-color: var(--color-bg-print-container);
	margin: auto;
	padding: 20px;
	max-width: 800px;
}
.print-container ul,
.print-container ol {
    margin: 1em 0 1em 2em;
    padding: 0;
	float: none;
}
.print-container ul {
    list-style-type: disc;
}
.print-container li {
    margin-bottom: 0.5em;
    padding: 0;
}
/* When printing, hide everything except the container */
@media print {
	body {
		background-color: #ffffff;
	}
	#block1 {
		padding: 0;
	}
	.block1inner {
		width: 100% !important;
		margin: 0 !important;
		padding: 0 !important;
	}
	.no-print, header {
		display: none;
	}
	body * {
		visibility: hidden;
	}
	.print-container, .print-container * {
		visibility: visible;
	}
	.print-container {
		background-color: #ffffff;
		color: #000000 !important;
		width: 100%;
		max-width: none;
		padding: 0px;
		margin: 0;
	}
}

/* RESPONSIVE */
@media screen and (max-width: 1000px) {
	.block1inner {width: 100%;}
}

